[tool.poetry]
name = "pw-hw11"
version = "0.1.0"
description = ""
authors = ["OleksandrZahar0vi4 <zaharovich007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
